# sea_state_analyzer

./: .gitignore  AGENT.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  Makefile  README.md  conftest.py  inctructions.md  local_deploy.sh  main.py  repository.json  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  docker.yml
.harness/skills/: reviewer.md
boat_wave_state/: config.yaml  deploy.sh  requirements.txt  run.sh
docs/reviews/: 2026-06-19-initial-code-review.md  README.md
ha-addon/: Dockerfile  config.yaml  deploy.sh  run.sh
harness/: README.md  conventions.md
output/20260310_130858/: events.jsonl  features_10s.parquet  features_300s.parquet  features_30s.parquet  features_60s.parquet  samples.parquet
output/20260310_131126/: path_inventory.md
rust/: Cargo.toml  pyproject.toml
rust/src/: doppler.rs  dsp.rs  heave.rs  lib.rs  scales.rs  vessel.rs
scripts/: validate_rust_docker.sh
sea_state_analyzer/: .dockerignore  Dockerfile  config.yaml  deploy.sh  requirements.txt  run.sh
src/: config.py  engine.py  feature_extractor.py  heave_estimator.py  imu_detect.py  imu_reader.py  imu_registry.py  main.py  models.py  paths.py  plotter.py  recorder.py  sample_merge.py  scales.py  sea_state_learner.py  signalk_auth.py  signalk_client.py  signalk_publisher.py  state_store.py  vessel_config.py
tests/: test_auth.py  test_doppler.py  test_engine.py  test_features.py  test_heave.py  test_imu.py  test_imu_detect.py  test_parsing.py  test_publisher.py  test_rolling.py  test_scales.py  test_sea_state_learner.py  test_vessel_config.py
(+22 files in other folders)
